liberica