@@ -16,8 +16,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <microstream.version>07.01.00-MS-GA</microstream.version>
         <compiler-plugin.version>3.8.1</compiler-plugin.version>
 	    <maven.compiler.parameters>true</maven.compiler.parameters>
@@ -133,17 +133,15 @@
 		        <version>${compiler-plugin.version}</version>
 		        <configuration>
 		          <parameters>${maven.compiler.parameters}</parameters>
-		          <source>19</source>
-				  <target>19</target>
-			      <compilerArgs>--enable-preview</compilerArgs>
+		          <source>17</source>
+				  <target>17</target>
 			    </configuration>
 		      </plugin>
 		      <plugin>
 		        <artifactId>maven-surefire-plugin</artifactId>
 		        <version>${surefire-plugin.version}</version>
 		        <configuration>
-		            <argLine>--enable-preview</argLine>
-                    <systemPropertyVariables>
+		            <systemPropertyVariables>
 		  		        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
 		        	    <maven.home>${maven.home}</maven.home>
 		          </systemPropertyVariables>
